--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <input
           type="password"
           id="password"
-          placeholder="請輸入密碼(密碼是「某人的生日」例如:0112)"
+          placeholder="請輸入密碼(提示「某人的生日」例如:0112)"
           class="input-btn border focus:outline-none focus:ring-2 focus:ring-purple-400"
         />
         <button type="submit" class="input-btn bg-purple-600 text-white hover:bg-purple-700">
