--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       const now = new Date();
 
       if (now >= lockDate) {
-        passwordSection.innerHTML = `<p class="text-center text-red-600 font-semibold">密碼輸入功能已禁用！</p>`;
+        passwordSection.innerHTML = `<p class="text-center text-red-600 font-semibold">我以為妳不會再打開看了ㄟ(我有設定密碼有效時間)！</p>`;
         return;
       }
 
